--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div style="border: 2em; background-color: aqua; top: 50px; right: 100px;" >
     <h2>HOLA ARTURO SABALSA ESPINO</h2>
+    <span>Usuario</span>
+    <input name ="usuario" type="text" title="usuario" id="usuario" value="" >
+    <span>Contraseña</span>
+    <input name="password" type="password" title="contraseña" id="password" value="">
+    <button onclick="entrar()">Entrar</button>  
+</div>
 </body>
 </html>
