Se enlazo el js con el html

--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,13 @@
 <body>
     <div style="border: 2em; background-color: aqua; top: 50px; right: 100px;" >
     <h2>HOLA ARTURO SABALSA ESPINO</h2>
+    <form name="login">
     <span>Usuario</span>
     <input name ="usuario" type="text" title="usuario" id="usuario" value="" >
     <span>Contraseña</span>
     <input name="password" type="password" title="contraseña" id="password" value="">
-    <button onclick="entrar()">Entrar</button>  
+    <button id="click">Entrar</button>  
+</form>
 </div>
 </body>
 </html>
